log/build_2023-02-26_17-30-32/my_package/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ryanlin12/CSCE452_project2/install/my_package/lib/python3.10/site-packages/my_package/a_mlogo.py", line 23
    def move_turtle(self, float(dist)):
                               ^
SyntaxError: invalid syntax

